tests/neg/i13190/A_1.scala
object Opaque {
  opaque type FieldType[K, +V] <: V = V
}
